alle datasets/ veranderd en refelc

--- a/docs/Graphs Arg 3.ipynb
+++ b/docs/Graphs Arg 3.ipynb
@@ -16,8 +16,8 @@
     "import plotly.express as px\n",
     "import numpy as np\n",
     "\n",
-    "water = pd.read_csv('new_water_done5.csv')\n",
-    "green = pd.read_csv('iso_green.csv')\n",
+    "water = pd.read_csv('datasets/new_water_done5.csv')\n",
+    "green = pd.read_csv('datasets/iso_green.csv')\n",
     "columns_water = water.select_dtypes(include=['float'])\n",
     "columns_green = green.select_dtypes(include=['float'])\n"
    ]
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-28T11:58:45.998682882Z",
@@ -57,7 +57,7 @@
         {
          "coloraxis": "coloraxis",
          "geo": "geo",
-         "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2001<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
+         "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2001.0<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
          "hovertext": [
           "Afghanistan",
           "Albania",
@@ -777,7 +777,7 @@
           {
            "coloraxis": "coloraxis",
            "geo": "geo",
-           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2001<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
+           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2001.0<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
            "hovertext": [
             "Afghanistan",
             "Albania",
@@ -1491,14 +1491,14 @@
            ]
           }
          ],
-         "name": "2001"
+         "name": "2001.0"
         },
         {
          "data": [
           {
            "coloraxis": "coloraxis",
            "geo": "geo",
-           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2002<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
+           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2002.0<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
            "hovertext": [
             "Afghanistan",
             "Albania",
@@ -2212,14 +2212,14 @@
            ]
           }
          ],
-         "name": "2002"
+         "name": "2002.0"
         },
         {
          "data": [
           {
            "coloraxis": "coloraxis",
            "geo": "geo",
-           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2003<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
+           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2003.0<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
            "hovertext": [
             "Afghanistan",
             "Albania",
@@ -2933,14 +2933,14 @@
            ]
           }
          ],
-         "name": "2003"
+         "name": "2003.0"
         },
         {
          "data": [
           {
            "coloraxis": "coloraxis",
            "geo": "geo",
-           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2004<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
+           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2004.0<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
            "hovertext": [
             "Afghanistan",
             "Albania",
@@ -3654,14 +3654,14 @@
            ]
           }
          ],
-         "name": "2004"
+         "name": "2004.0"
         },
         {
          "data": [
           {
            "coloraxis": "coloraxis",
            "geo": "geo",
-           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2005<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
+           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2005.0<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
            "hovertext": [
             "Afghanistan",
             "Albania",
@@ -4375,14 +4375,14 @@
            ]
           }
          ],
-         "name": "2005"
+         "name": "2005.0"
         },
         {
          "data": [
           {
            "coloraxis": "coloraxis",
            "geo": "geo",
-           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2006<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
+           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2006.0<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
            "hovertext": [
             "Afghanistan",
             "Albania",
@@ -5096,14 +5096,14 @@
            ]
           }
          ],
-         "name": "2006"
+         "name": "2006.0"
         },
         {
          "data": [
           {
            "coloraxis": "coloraxis",
            "geo": "geo",
-           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2007<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
+           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2007.0<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
            "hovertext": [
             "Afghanistan",
             "Albania",
@@ -5817,14 +5817,14 @@
            ]
           }
          ],
-         "name": "2007"
+         "name": "2007.0"
         },
         {
          "data": [
           {
            "coloraxis": "coloraxis",
            "geo": "geo",
-           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2008<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
+           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2008.0<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
            "hovertext": [
             "Afghanistan",
             "Albania",
@@ -6538,14 +6538,14 @@
            ]
           }
          ],
-         "name": "2008"
+         "name": "2008.0"
         },
         {
          "data": [
           {
            "coloraxis": "coloraxis",
            "geo": "geo",
-           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2009<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
+           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2009.0<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
            "hovertext": [
             "Afghanistan",
             "Albania",
@@ -7259,14 +7259,14 @@
            ]
           }
          ],
-         "name": "2009"
+         "name": "2009.0"
         },
         {
          "data": [
           {
            "coloraxis": "coloraxis",
            "geo": "geo",
-           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2010<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
+           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2010.0<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
            "hovertext": [
             "Afghanistan",
             "Albania",
@@ -7980,14 +7980,14 @@
            ]
           }
          ],
-         "name": "2010"
+         "name": "2010.0"
         },
         {
          "data": [
           {
            "coloraxis": "coloraxis",
            "geo": "geo",
-           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2011<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
+           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2011.0<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
            "hovertext": [
             "Afghanistan",
             "Albania",
@@ -8701,14 +8701,14 @@
            ]
           }
          ],
-         "name": "2011"
+         "name": "2011.0"
         },
         {
          "data": [
           {
            "coloraxis": "coloraxis",
            "geo": "geo",
-           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2012<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
+           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2012.0<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
            "hovertext": [
             "Afghanistan",
             "Albania",
@@ -9422,14 +9422,14 @@
            ]
           }
          ],
-         "name": "2012"
+         "name": "2012.0"
         },
         {
          "data": [
           {
            "coloraxis": "coloraxis",
            "geo": "geo",
-           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2013<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
+           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2013.0<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
            "hovertext": [
             "Afghanistan",
             "Albania",
@@ -10143,14 +10143,14 @@
            ]
           }
          ],
-         "name": "2013"
+         "name": "2013.0"
         },
         {
          "data": [
           {
            "coloraxis": "coloraxis",
            "geo": "geo",
-           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2014<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
+           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2014.0<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
            "hovertext": [
             "Afghanistan",
             "Albania",
@@ -10864,14 +10864,14 @@
            ]
           }
          ],
-         "name": "2014"
+         "name": "2014.0"
         },
         {
          "data": [
           {
            "coloraxis": "coloraxis",
            "geo": "geo",
-           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2015<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
+           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2015.0<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
            "hovertext": [
             "Afghanistan",
             "Albania",
@@ -11585,14 +11585,14 @@
            ]
           }
          ],
-         "name": "2015"
+         "name": "2015.0"
         },
         {
          "data": [
           {
            "coloraxis": "coloraxis",
            "geo": "geo",
-           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2016<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
+           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2016.0<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
            "hovertext": [
             "Afghanistan",
             "Albania",
@@ -12306,14 +12306,14 @@
            ]
           }
          ],
-         "name": "2016"
+         "name": "2016.0"
         },
         {
          "data": [
           {
            "coloraxis": "coloraxis",
            "geo": "geo",
-           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2017<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
+           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2017.0<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
            "hovertext": [
             "Afghanistan",
             "Albania",
@@ -13027,14 +13027,14 @@
            ]
           }
          ],
-         "name": "2017"
+         "name": "2017.0"
         },
         {
          "data": [
           {
            "coloraxis": "coloraxis",
            "geo": "geo",
-           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2018<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
+           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2018.0<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
            "hovertext": [
             "Afghanistan",
             "Albania",
@@ -13748,14 +13748,14 @@
            ]
           }
          ],
-         "name": "2018"
+         "name": "2018.0"
         },
         {
          "data": [
           {
            "coloraxis": "coloraxis",
            "geo": "geo",
-           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2019<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
+           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2019.0<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
            "hovertext": [
             "Afghanistan",
             "Albania",
@@ -14469,14 +14469,14 @@
            ]
           }
          ],
-         "name": "2019"
+         "name": "2019.0"
         },
         {
          "data": [
           {
            "coloraxis": "coloraxis",
            "geo": "geo",
-           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2020<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
+           "hovertemplate": "<b>%{hovertext}</b><br><br>Year=2020.0<br>Country=%{location}<br>Water quality=%{z}<extra></extra>",
            "hovertext": [
             "Afghanistan",
             "Albania",
@@ -15190,7 +15190,7 @@
            ]
           }
          ],
-         "name": "2020"
+         "name": "2020.0"
         }
        ],
        "layout": {
@@ -15273,7 +15273,7 @@
            {
             "args": [
              [
-              "2001"
+              "2001.0"
              ],
              {
               "frame": {
@@ -15288,13 +15288,13 @@
               }
              }
             ],
-            "label": "2001",
+            "label": "2001.0",
             "method": "animate"
            },
            {
             "args": [
              [
-              "2002"
+              "2002.0"
              ],
              {
               "frame": {
@@ -15309,13 +15309,13 @@
               }
              }
             ],
-            "label": "2002",
+            "label": "2002.0",
             "method": "animate"
            },
            {
             "args": [
              [
-              "2003"
+              "2003.0"
              ],
              {
               "frame": {
@@ -15330,13 +15330,13 @@
               }
              }
             ],
-            "label": "2003",
+            "label": "2003.0",
             "method": "animate"
            },
            {
             "args": [
              [
-              "2004"
+              "2004.0"
              ],
              {
               "frame": {
@@ -15351,13 +15351,13 @@
               }
              }
             ],
-            "label": "2004",
+            "label": "2004.0",
             "method": "animate"
            },
            {
             "args": [
              [
-              "2005"
+              "2005.0"
              ],
              {
               "frame": {
@@ -15372,13 +15372,13 @@
               }
              }
             ],
-            "label": "2005",
+            "label": "2005.0",
             "method": "animate"
            },
            {
             "args": [
              [
-              "2006"
+              "2006.0"
              ],
              {
               "frame": {
@@ -15393,13 +15393,13 @@
               }
              }
             ],
-            "label": "2006",
+            "label": "2006.0",
             "method": "animate"
            },
            {
             "args": [
              [
-              "2007"
+              "2007.0"
              ],
              {
               "frame": {
@@ -15414,13 +15414,13 @@
               }
              }
             ],
-            "label": "2007",
+            "label": "2007.0",
             "method": "animate"
            },
            {
             "args": [
              [
-              "2008"
+              "2008.0"
              ],
              {
               "frame": {
@@ -15435,13 +15435,13 @@
               }
              }
             ],
-            "label": "2008",
+            "label": "2008.0",
             "method": "animate"
            },
            {
             "args": [
              [
-              "2009"
+              "2009.0"
              ],
              {
               "frame": {
@@ -15456,13 +15456,13 @@
               }
              }
             ],
-            "label": "2009",
+            "label": "2009.0",
             "method": "animate"
            },
            {
             "args": [
              [
-              "2010"
+              "2010.0"
              ],
              {
               "frame": {
@@ -15477,13 +15477,13 @@
               }
              }
             ],
-            "label": "2010",
+            "label": "2010.0",
             "method": "animate"
            },
            {
             "args": [
              [
-              "2011"
+              "2011.0"
              ],
              {
               "frame": {
@@ -15498,13 +15498,13 @@
               }
              }
             ],
-            "label": "2011",
+            "label": "2011.0",
             "method": "animate"
            },
            {
             "args": [
              [
-              "2012"
+              "2012.0"
              ],
              {
               "frame": {
@@ -15519,13 +15519,13 @@
               }
              }
             ],
-            "label": "2012",
+            "label": "2012.0",
             "method": "animate"
            },
            {
             "args": [
              [
-              "2013"
+              "2013.0"
              ],
              {
               "frame": {
@@ -15540,13 +15540,13 @@
               }
              }
             ],
-            "label": "2013",
+            "label": "2013.0",
             "method": "animate"
            },
            {
             "args": [
              [
-              "2014"
+              "2014.0"
              ],
              {
               "frame": {
@@ -15561,13 +15561,13 @@
               }
              }
             ],
-            "label": "2014",
+            "label": "2014.0",
             "method": "animate"
            },
            {
             "args": [
              [
-              "2015"
+              "2015.0"
              ],
              {
               "frame": {
@@ -15582,13 +15582,13 @@
               }
              }
             ],
-            "label": "2015",
+            "label": "2015.0",
             "method": "animate"
            },
            {
             "args": [
              [
-              "2016"
+              "2016.0"
              ],
              {
               "frame": {
@@ -15603,13 +15603,13 @@
               }
              }
             ],
-            "label": "2016",
+            "label": "2016.0",
             "method": "animate"
            },
            {
             "args": [
              [
-              "2017"
+              "2017.0"
              ],
              {
               "frame": {
@@ -15624,13 +15624,13 @@
               }
              }
             ],
-            "label": "2017",
+            "label": "2017.0",
             "method": "animate"
            },
            {
             "args": [
              [
-              "2018"
+              "2018.0"
              ],
              {
               "frame": {
@@ -15645,13 +15645,13 @@
               }
              }
             ],
-            "label": "2018",
+            "label": "2018.0",
             "method": "animate"
            },
            {
             "args": [
              [
-              "2019"
+              "2019.0"
              ],
              {
               "frame": {
@@ -15666,13 +15666,13 @@
               }
              }
             ],
-            "label": "2019",
+            "label": "2019.0",
             "method": "animate"
            },
            {
             "args": [
              [
-              "2020"
+              "2020.0"
              ],
              {
               "frame": {
@@ -15687,7 +15687,7 @@
               }
              }
             ],
-            "label": "2020",
+            "label": "2020.0",
             "method": "animate"
            }
           ],
