--- a/docs/Graphs and Arguments Research Ruben.ipynb
+++ b/docs/Graphs and Arguments Research Ruben.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2023-06-20T13:29:06.738378201Z",
      "start_time": "2023-06-20T13:29:05.922335276Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -19,7 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-06-20T13:31:27.850636423Z",
+     "start_time": "2023-06-20T13:31:26.473727520Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -30,8 +37,8 @@
     }
    ],
    "source": [
-    "df_green = pd.read_csv('iso_green.csv')\n",
-    "df_infra = pd.read_csv('iso_infra.csv')\n",
+    "df_green = pd.read_csv('datasets/iso_green.csv')\n",
+    "df_infra = pd.read_csv('datasets/iso_infra.csv')\n",
     "\n",
     "infra_list = list(df_infra.columns.values)\n",
     "green_list = list(df_green.columns.values)\n",
@@ -46,14 +53,14 @@
     "# figure = px.line(combined, x='Year_y', y='Built up area, % total land', color='Country_y')\n",
     "#\n",
     "# figure.show()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-20T13:31:27.850636423Z",
-     "start_time": "2023-06-20T13:31:26.473727520Z"
-    }
-   }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -65,14 +72,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
