--- a/docs/Reflection.ipynb
+++ b/docs/Reflection.ipynb
@@ -1,7 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Feedback from group / TA\n",
     "#### Feedback van groepen J3, R4\n",
@@ -12,10 +16,28 @@
     "4. Variabelen duidelijker aangeven, komt weer terug op tekst gebruiken als onderbouwing.\n",
     "5. Caption met conclusie (fig.add_annotation()).\n",
     "6. Parcats nog wat duidelijker maken vooral de onderbouwing en industrie duidelijker definiëren."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Take aways\n",
+    "After the feedback we realized we had to change up the wording a lot, we had to let the figures do the explaining instead of the text. We changed all texts and looked carefully after the wordcount.\n",
+    "\n",
+    "We also changed the way of showing our preprocessing, now with a link to the repository to see the full code.\n",
+    "\n",
+    "We changed the annotations and explained the variables more carefully.\n",
+    "\n",
+    "This feedback has been super important for our project, with it we massively improved our project and clarity of our arguments."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
