--- a/docs/preprocessing.ipynb
+++ b/docs/preprocessing.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "# import pandas as pd\n",
-    "# originaldf = pd.read_csv('water_original.csv')\n",
+    "# originaldf = pd.read_csv('originaldatasets/water_original.csv')\n",
     "# for i in originaldf.columns:\n",
     "#     print(i, originaldf.iloc[1])\n",
     "#  gives \n",
@@ -112,7 +112,7 @@
    "source": [
     "\n",
     "# Read the original file\n",
-    "# df = pd.read_csv('GREEN_GROWTH_13062023131420405.csv')\n",
+    "# df = pd.read_csv('originaldatasets/GREEN_GROWTH_13062023131420405.csv')\n",
     "\n",
     "# Pivot the data using groupby and unstack\n",
     "# df_pivoted = df.groupby(['Country', 'Year', 'Variable'])['Value'].first().unstack()\n",
@@ -141,7 +141,7 @@
     "# import pandas as pd\n",
     "\n",
     "# # Read the CSV file\n",
-    "# df = pd.read_csv('MEI_REAL_13062023132859795.csv')\n",
+    "# df = pd.read_csv('originaldatasets/MEI_REAL_13062023132859795.csv')\n",
     "\n",
     "# # Pivot the data using groupby and unstack\n",
     "# df_pivoted = df.groupby(['Country', 'Time', 'Subject'])['Value'].first().unstack()\n",
@@ -183,7 +183,7 @@
     "# import pandas as pd\n",
     "\n",
     "# # Read the CSV file\n",
-    "# df = pd.read_csv('REGION_INNOVATION_13062023132043749.csv')\n",
+    "# df = pd.read_csv('originaldatasets/REGION_INNOVATION_13062023132043749.csv')\n",
     "\n",
     "# # Pivot the data using groupby and unstack\n",
     "# df_pivoted = df.groupby(['Country', 'Year', 'Indicator'])['Value'].first().unstack()\n",
@@ -214,7 +214,7 @@
     "# import pandas as pd\n",
     "\n",
     "# # Read the CSV file\n",
-    "# df = pd.read_csv('ITF_INDICATORS_12062023142856355.csv')\n",
+    "# df = pd.read_csv('originaldatasets/ITF_INDICATORS_12062023142856355.csv')\n",
     "\n",
     "# # Pivot the data using groupby and unstack\n",
     "# df_pivoted = df.groupby(['Country', 'Year', 'Indicator'])['Value'].first().unstack()\n",
