laatste updates oli

--- a/docs/Arg 4.ipynb
+++ b/docs/Arg 4.ipynb
@@ -6,7 +6,7 @@
    "id": "8bce4abb",
    "metadata": {},
    "source": [
-    "# The Industrial increase of Developing Countries\n",
+    "# The Industrial increase of developing countries\n",
     "Countries with high and low GDP both contribute a lot to the carbon emissions we want to reduce. According to a 2020 paper on Environmental pollution by Prince O. Ukaogo, Ugochukwu Ewuzie and Chibuzo V. Onwuka [2]: \"Both developed and developing nations share this burden together, though awareness and stricter laws in developed countries have contributed to a larger extent in protecting their environment.\". What this paper fails to bring into account is the fact that companies from first world countries may be directly contributing to the pollution of third world countries by moving their industrial plans to these countries for a cost benifit.\n",
     "\n",
     "\n",
